# Francis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  VISION.md  _francis_package_shim.py  package-lock.json  package.json  pyproject.toml
electron/: README-overlay.md  accessibility.js  accessibility.test.cjs  authority-posture.js  authority-posture.test.cjs  backup-state.js  backup-state.test.cjs  build-info.js  build-info.test.cjs  build-provenance.js  build-provenance.test.cjs  decommission-plan.js  decommission-plan.test.cjs  degraded-mode.js  degraded-mode.test.cjs  dev-run.ps1  foreground-window.js  foreground-window.test.cjs  generate-build-provenance.cjs  hud-runtime.js  hud-runtime.test.cjs  lifecycle-history.js  lifecycle-history.test.cjs  login-item.js  login-item.test.cjs  main.js  orb-authority.js  orb-authority.test.cjs  orb-behavior.js  orb-behavior.test.cjs  orb-perception.js  orb-perception.test.cjs  orb-plan.js  orb-plan.test.cjs  orb-shell.html  orb-surface.js  orb-surface.test.cjs  overlay-portability.js  overlay-portability.test.cjs  preferences.js  (+33 more)
francis-orb/: build.mjs  index.ts  package-lock.json  package.json  tsconfig.json
francis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
francis_brain/: __init__.py
francis_connectors/: __init__.py
francis_core/: __init__.py
francis_forge/: __init__.py
francis_llm/: __init__.py
francis_policy/: __init__.py
francis_presence/: __init__.py
francis_skills/: __init__.py
policies/: paranoia.yaml
proto/: francis_events.proto  generate.ps1
scripts/: lint.ps1  migrate.ps1  orb_visual_check.ps1  playwright.ps1  test.ps1  (+1 more)
(+651 files in other folders)
