[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "francis"
version = "0.2.0"
description = "Francis operator-grade grounded assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
  "ruff>=0.11,<1",
]

[tool.setuptools]
packages = [
  "apps",
  "apps.api",
  "apps.api.routes",
  "services",
  "services.gateway",
  "services.gateway.app",
  "services.gateway.app.middleware",
  "services.gateway.app.routes",
  "services.gateway.app.schemas",
  "services.orchestrator",
  "services.orchestrator.app",
  "services.orchestrator.app.routes",
  "services.hud",
  "services.hud.app",
  "services.hud.app.views",
  "services.voice",
  "services.voice.app",
  "francis",
  "francis.core",
  "francis.brain",
  "francis.presence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "packages/francis_core",
  "packages/francis_brain",
  "packages/francis_policy",
  "packages/francis_skills",
  "packages/francis_presence",
  "packages/francis_forge",
  "packages/francis_connectors",
  "packages/francis_llm",
]
addopts = ["--strict-markers"]
markers = [
  "unit: fast pure-Python validation",
  "integration: service and route integration coverage",
  "redteam: adversarial and policy abuse coverage",
  "evals: evaluation harness coverage",
  "slow: long-running verification reserved for the full lane",
]

[tool.ruff]
exclude = [
  ".venv",
  "workspace",
  "runtime",
]
